<resources>
    <string name="app_name">IATE Polban</string>
    <string name="title_activity_navigation_drawer"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="article_detail_example">Samsung designs its phones to be appealing to the widest possible audience, and that makes the Galaxy S9+ a great device for just about anyone. It has a big and beautiful display that\'s quite simply the best in the industry, but with very small bezels and curved edges, it fits into a relatively compact size. Internally, it has all of the latest specs to handle any app or task you need. It also has a pair of cameras on the back that are in the mix as the best available today. Samsung has also kept around crowd-pleasing features like wireless charging, waterproofing, an SD card slot and a headphone jack. Really, the Galaxy S9+ does a great job at being all things to all people.Best of all, if you don\'t care for the larger size of the Galaxy S9+ for whatever reason, you can simply buy the smaller and less expensive Galaxy S9 instead and get the same core experience with only a few changes. Samsung designs its phones to be appealing to the widest possible audience, and that makes the Galaxy S9+ a great device for just about anyone. It has a big and beautiful display that\'s quite simply the best in the industry, but with very small bezels and curved edges, it fits into a relatively compact size. Internally, it has all of the latest specs to handle any app or task you need. It also has a pair of cameras on the back that are in the mix as the best available today. Samsung has also kept around crowd-pleasing features like wireless charging, waterproofing, an SD card slot and a headphone jack. Really, the Galaxy S9+ does a great job at being all things to all people.Best of all, if you don\'t care for the larger size of the Galaxy S9+ for whatever reason, you can simply buy the smaller and less expensive Galaxy S9 instead and get the same core experience with only a few changes. Samsung designs its phones to be appealing to the widest possible audience, and that makes the Galaxy S9+ a great device for just about anyone. It has a big and beautiful display that\'s quite simply the best in the industry, but with very small bezels and curved edges, it fits into a relatively compact size. Internally, it has all of the latest specs to handle any app or task you need. It also has a pair of cameras on the back that are in the mix as the best available today. Samsung has also kept around crowd-pleasing features like wireless charging, waterproofing, an SD card slot and a headphone jack. Really, the Galaxy S9+ does a great job at being all things to all people.Best of all, if you don\'t care for the larger size of the Galaxy S9+ for whatever reason, you can simply buy the smaller and less expensive Galaxy S9 instead and get the same core experience with only a few changes. Samsung designs its phones to be appealing to the widest possible audience, and that makes the Galaxy S9+ a great device for just about anyone. It has a big and beautiful display that\'s quite simply the best in the industry, but with very small bezels and curved edges, it fits into a relatively compact size. Internally, it has all of the latest specs to handle any app or task you need. It also has a pair of cameras on the back that are in the mix as the best available today. Samsung has also kept around crowd-pleasing features like wireless charging, waterproofing, an SD card slot and a headphone jack. Really, the Galaxy S9+ does a great job at being all things to all people.Best of all, if you don\'t care for the larger size of the Galaxy S9+ for whatever reason, you can simply buy the smaller and less expensive Galaxy S9 instead and get the same core experience with only a few changes.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_register">REGISTRASI MEMBER</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password">LUPA PASSWORD ?</string>
    <string name="action_forgot">SUBMIT</string>

    <!-- Strings related to drawer -->
    <string name="copyright">Copyright SuperFriends Jawa Barat\nIndonesia - 2018</string>
    <string name="kalender_kegiatan">KALENDER KEGIATAN</string>
    <string name="ingatkan_saya">INGATKAN SAYA</string>
    <string name="batal_hadir">BATAL HADIR</string>
    <string name="saya_telah_membaca_dan_menyetujui_syarat_dan_ketentuan_yang_berlaku"><u>Saya telah membaca dan menyetujui syarat dan ketentuan yang berlaku</u></string>
    <string name="unduh_kartu_digital"><u>Simpan Ke Galeri</u></string>

    <string-array name="status_array">
        <!--<item>Pelajar</item>-->
        <item>Bekerja</item>
        <item>Tidak Bekerja</item>
    </string-array>

    <array name="integer_array_name">
        <item>@drawable/sticker_1</item>
        <item>@drawable/sticker_2</item>
        <item>@drawable/sticker_3</item>
        <item>@drawable/sticker_4</item>
        <item>@drawable/sticker_5</item>
        <item>@drawable/sticker_6</item>
        <item>@drawable/sticker_7</item>
        <item>@drawable/sticker_8</item>
        <item>@drawable/sticker_9</item>
        <item>@drawable/sticker_10</item>
        <item>@drawable/sticker_11</item>
        <item>@drawable/sticker_12</item>
        <item>@drawable/sticker_13</item>
        <item>@drawable/sticker_14</item>
        <item>@drawable/sticker_15</item>
        <item>@drawable/sticker_16</item>
        <item>@drawable/sticker_17</item>
        <item>@drawable/sticker_18</item>
        <item>@drawable/sticker_19</item>
        <item>@drawable/sticker_20</item>
        <item>@drawable/sticker_21</item>
        <item>@drawable/sticker_22</item>
        <item>@drawable/sticker_23</item>
        <item>@drawable/sticker_24</item>
        <item>@drawable/sticker_25</item>
        <item>@drawable/sticker_26</item>
        <item>@drawable/sticker_27</item>
        <item>@drawable/sticker_28</item>
    </array>
</resources>
