<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="4">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="ＩＡＴＥ   ＣＥＮＴＥＲ"-->
<!--                android:textSize="25sp"-->
<!--                android:textColor="@color/colorPrimaryDark"-->
<!--                android:textStyle="bold"/>-->

            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/iate_polban_logo" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="6">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_login_margin"
                android:layout_marginRight="@dimen/default_login_margin"
                android:layout_marginBottom="10dp"
                android:textSize="13sp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/prompt_username"
                android:fontFamily="@font/open_sans"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorDefaultDark"
                android:textColorHint="#CBD5DA" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/default_login_margin"
                android:layout_marginRight="@dimen/default_login_margin"
                android:layout_marginLeft="@dimen/default_login_margin"
                android:textSize="13sp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/prompt_password"
                android:fontFamily="@font/open_sans"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColorHint="#CBD5DA"
                android:textColor="@color/colorDefaultDark"/>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/default_login_margin"
                android:layout_marginRight="@dimen/default_login_margin"
                android:layout_marginLeft="@dimen/default_login_margin"
                android:layout_gravity="center"
                android:background="@drawable/shape_button_login"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryTransparent"
                android:fontFamily="@font/open_sans"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/forgot_password"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorDefaultDark"
                android:text="@string/forget_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="20"
                android:layout_marginTop="@dimen/default_login_margin"
                android:layout_marginBottom="@dimen/default_login_margin">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@drawable/shape_line"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/colorDefaultDark"
                    android:text="OR"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@drawable/shape_line"/>
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/default_login_margin"
                android:layout_marginLeft="@dimen/default_login_margin"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_button_register"
                android:text="@string/action_register"
                android:textColor="@color/colorDefaultDark"
                android:fontFamily="@font/open_sans" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>